=== 2.? / 2009-?

* N Major Enhancements
  * Constant display removed from ri output.  There's no easy way to make them
    presentable.  Use irb or ruby -e instead.  Ruby Bug #549.
  * New recursive-descent parser for RDoc::Markup.  See RDoc::Markup::Parser
  * New ri data format using Marshal, prebuilt caches, improved merging

* N Minor Enhancements
  * API enhancements for writing parsers like the Ruby parser, see
    RDoc::Parser::RubyTools
  * Uses pager over less and more for Debian.  Ruby Bug #1171.
  * When rdoc is in debug mode, ^C now prints a backtrace
  * The ri data generator now supports ^T
  * C parser now handles Document-method better.  Bug #27329.

* N Bug Fixes
  * The :attr: directives now use the name given to create an attribute.  See
    RDoc::Parser::Ruby#parse_meta_attr.
  * Clean up circular require warnings on 1.9.
  * Fix crossrefs on paths with '-'.  Ruby Bug #883.
  * Fix ruby parser for alias with = in the name.  Bug #27522.
  * Images are no longer executable.  Bug #27156.
  * --op is no longer overridden by --ri.  Bug #27054.
  * :method: now works when at the end of a class.  Bug #26910.

=== 2.4.3 / 2009-04-01

* 2 Bug Fixes
  * Corrected patch for file links
  * Corrected display of file popup

=== 2.4.2 / 2009-03-25

* 2 Minor Enhancements
  * Added --pipe for turning RDoc on stdin into HTML
  * Added rdoc/task.rb containing a replacement for rake/rdoctask.rb.  Use
    RDoc::Task now instead of Rake::RDocTask.

* 10 Bug Fixes
  * Writing the ri cache file to the proper directory.  Bug #24459 by Lars
    Christensen.
  * Possible fix for Dir::[] and Pathname interaction on 1.9.  Bug #24650 by
    tiburon.
  * Fixed scanning constants for if/end, etc. pairs.  Bug #24609 by Ryan
    Davis.
  * Fixed private methods in the C parser.  Bug #24599 by Aaron Patterson.
  * Fixed display of markup on RDoc main page.  Bug #24168 by rhubarb.
  * Fixed display of \\ character in documentation proceeding words.